# MariaDB

./: .gitignore  CMakeLists.txt  VERSION  config.h.cmake  configure.cmake
client/: CMakeLists.txt  client_priv.h  mysql.cc  mysqlbinlog.cc  mysqlcheck.c  mysqldump.c  mysqlimport.c  mysqlshow.c  mysqlslap.c  mysqltest.cc  sql_string.h.dontuse
cmake/: cpack_rpm.cmake  create_initial_db.cmake  install_macros.cmake  make_dist.cmake.in  mariadb_connector_c.cmake  package_name.cmake  pcre.cmake  plugin.cmake  ssl.cmake  wsrep.cmake
cmake/build_configurations/: mysql_release.cmake
debian/: control  mariadb-backup-10.1.files
extra/: CMakeLists.txt  innochecksum.cc
extra/mariabackup/: CMakeLists.txt  backup_copy.cc  common.h  datasink.c  ds_local.c  fil_cur.cc  innobackupex.bat  innobackupex.cc  xb_regex.h  xtrabackup.cc  xtrabackup.h
extra/xtrabackup/: CMakeLists.txt  backup_copy.cc  backup_mysql.cc  encryption_plugin.cc  fil_cur.cc  innobackupex.cc  read_filt.cc  wsrep.cc  xb_regex.h  xbcrypt_write.c  xtrabackup.cc  xtrabackup.h
include/: m_ctype.h  ma_crypto.h  ma_crypto_internal.h  ma_tls_vio.h  my_atomic.h  my_base.h  my_bitmap.h  my_crypt.h  my_global.h  my_sys.h  my_time.h  my_valgrind.h  mysql.h.pp  mysql_async.h  mysql_com.h  service_versions.h  sha2.h  sslopt-case.h  sslopt-longopts.h  sslopt-vars.h  violite.h  wsrep.h
include/atomic/: gcc_builtins.h
include/mysql/: plugin.h  plugin_audit.h.pp  plugin_auth.h.pp  plugin_encryption.h  plugin_encryption.h.pp  plugin_ftparser.h.pp  plugin_password_validation.h.pp  service_encryption.h  service_error_log.h  service_md5.h  service_my_print_error.h  service_sha1.h  service_thd_alloc.h  services.h
libmysqld/: CMakeLists.txt  lib_sql.cc
libmysqld/examples/: CMakeLists.txt
libservices/: CMakeLists.txt  error_log_service.c
mysql-test/: disabled.def  invisible_2.test  mysql-test-run.pl  suite.pm
mysql-test/collections/: buildbot_suites.bat
mysql-test/include/: check-testcase.test  common-tests.inc  ctype_numconv.inc  ctype_utf8mb4.inc  dbt3_s001.inc  default_mysqld.cnf  func_hybrid_type.inc  function_defaults.inc  hard_default_my.cnf  have_ssl_crypto_functs.inc  have_thread_statistics.inc  have_userstat.inc  icp_tests.inc  innodb-page-compression.inc  mix1.inc  mix2.inc  mtr_warnings.sql  ps_conv.inc  ps_modify.inc  type_hrtime.inc  type_temporal_zero_default.inc  wait_until_connected_again.inc  with_non_recursive.inc  with_recursive.inc
mysql-test/lib/: generate-ssl-certs.sh  mtr_cases.pm
mysql-test/main/: alter_table.result  check_constraint.result  check_constraint.test  column_compression_parts.test  constraints.result  constraints.test  derived_cond_pushdown.result  derived_view.result  distinct.result  func_debug.result  group_by.result  group_min_max.result  having.result  having_cond_pushdown.result  having_cond_pushdown.test  in_subq_cond_pushdown.result  in_subq_cond_pushdown.test  information_schema.result  invisible_field.result  invisible_field_debug.result  invisible_field_debug.test  join.result  join_cache.result  join_outer.result  join_outer_jcl6.result  key.result  lock.result  mdev15777.result  mdev15777.test  merge.result  myisam_explain_non_select_all.result  mysqld--help.result  parser.result  parser.test  partition_innodb.result  ps.result  ps_ddl.result  range.result  range.test  range_mrr_icp.result  (+27 more)
mysql-test/r/: 1st.result  adddate_454.result  aggregate_functions.result  aggregate_parameters_values.result  aggregate_regular.result  aggregate_show_create_alter.result  alias.result  alter_table.result  analyze_format_json.result  bigint.result  bug13633383.result  cast.result  comment_column.result  comment_index.result  compound.result  compress.result  connect.result  create.result  create_drop_function.result  cte_nonrecursive.result  cte_recursive.result  ctype_binary.result  ctype_cp1251.result  ctype_gbk.result  ctype_latin1.result  ctype_ldml.result  ctype_many.result  ctype_recoding.result  ctype_tis620.result  ctype_ucs.result  ctype_ujis.result  ctype_upgrade.result  ctype_utf16.result  ctype_utf16le.result  ctype_utf32.result  ctype_utf8.result  ctype_utf8mb4.result  ctype_utf8mb4_heap.result  (+216 more)
mysys/: CMakeLists.txt  hash.c  mf_iocache.c  my_addr_resolve.c  my_delete.c  mysys_priv.h  stacktrace.c
mysys_ssl/: CMakeLists.txt  ma_crypto_crypt.c  ma_crypto_hash.c  my_crypt.cc  my_md5.cc  my_sha1.cc
pcre2/: CMakeLists.txt
scripts/: CMakeLists.txt  mysql_install_db.sh  mysql_system_tables.sql  mysqld_safe.sh  wsrep_sst_common.sh  wsrep_sst_mariabackup.sh  wsrep_sst_mysqldump.sh  wsrep_sst_rsync.sh  wsrep_sst_xtrabackup-v2.sh
sql/: CMakeLists.txt  delayload.c  encryption.cc  field.cc  field.h  field_conv.cc  filesort.cc  filesort.h  ha_partition.cc  ha_partition.h  ha_sequence.h  handler.cc  handler.h  innodb_priv.h  item.cc  item.h  item_cmpfunc.cc  item_cmpfunc.h  item_create.cc  item_create.h  item_func.cc  item_func.h  item_inetfunc.cc  item_row.cc  item_row.h  item_strfunc.cc  item_strfunc.h  item_subselect.cc  item_subselect.h  item_sum.cc  item_sum.h  item_timefunc.cc  item_timefunc.h  item_vers.cc  item_windowfunc.h  item_xmlfunc.cc  key.cc  lex.h  lock.cc  log.cc  (+120 more)
sql-common/: client.c  mysql_async.c
storage/spider/: CMakeLists.txt  ha_spider.cc  ha_spider.h  spd_conn.cc  spd_copy_tables.cc  spd_db_handlersocket.cc  spd_db_handlersocket.h  spd_db_include.h  spd_db_mysql.cc  spd_db_mysql.h  spd_db_oracle.cc  spd_db_oracle.h  spd_direct_sql.cc  spd_malloc.cc  spd_ping_table.cc  spd_sys_table.cc  spd_table.cc  spd_table.h  spd_trx.cc
storage/xtradb/xtrabackup/src/: CMakeLists.txt  backup_copy.cc  backup_copy.h  backup_mysql.cc  common.h  compact.cc  datasink.c  ds_encrypt.c  encryption_plugin.cc  encryption_plugin.h  fil_cur.h  read_filt.cc  read_filt.h  wsrep.cc  xb0xb.h  xbstream_write.c  xtrabackup.cc
strings/: ctype.c
support-files/: compiler_warnings.supp
tests/: mysql_client_test.c
vio/: CMakeLists.txt  ma_tls_cipher.c  ma_tls_vio.c  vio.c  vio_priv.h  viosocket.c  viossl.c  viosslfactories.c
wsrep/: wsrep_dummy.c  wsrep_loader.c
(+1012 files in other folders)
